[package]
name = "cddns"
description = "A modern, hackable, green DDNS CLI and service for Cloudflare."
authors = ["Spencer C. Imbleau <spencer@imbleau.com>"]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/cddns"
readme = "README.md"
keywords = ["cloudflare", "ddns", "dns"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.2", features = ["derive", "env"] }
tokio = { version = "1.25", features = ["full"] }
crossterm = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ansi_term = "0.12"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.7"
anyhow = "1.0"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ron = "0.8"
regex = "1.7"
public-ip = "0.2"
directories = "5.0"
chrono = "0.4"
